@@ -1,3 +1,14 @@
+2010-03-25  Tasuku Suzuki  <tasuku.suzuki@nokia.com>
+
+        Reviewed by Eric Seidel.
+
+        [Qt]Fix compile error with QT_NO_ANIMATION
+        https://bugs.webkit.org/show_bug.cgi?id=36526
+
+        * platform/graphics/qt/GraphicsLayerQt.cpp:
+        (WebCore::GraphicsLayerQtImpl::~GraphicsLayerQtImpl):
+        * platform/graphics/qt/GraphicsLayerQt.h:
+
 2010-03-25  Tony Chang  <tony@chromium.org>
 
         Reviewed by Eric Seidel.
